--- a/Server/Base/Server.Base.csproj
+++ b/Server/Base/Server.Base.csproj
@@ -50,6 +50,9 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Base\DoubleMap.cs">
       <Link>DoubleMap.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Base\EQueue.cs">
+      <Link>EQueue.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Helper\ArrayHelper.cs">
       <Link>Helper\ArrayHelper.cs</Link>
     </Compile>
