actor对象迁移测试OK

--- a/Server/App/Server.App.csproj
+++ b/Server/App/Server.App.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="NLog.config">
