--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Event\SessionRecvMessage_Dispatch.cs" />
     <Compile Include="Init.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\UILobby\Component\UILobbyComponent.cs" />
+    <Compile Include="UI\UILobby\Factory\UILobbyFactory.cs" />
     <Compile Include="UI\UILogin\Component\UILoginComponent.cs" />
     <Compile Include="UI\UILogin\Event\InitSceneStart_CreateLoginUI.cs" />
     <Compile Include="UI\UILogin\Factory\UILoginFactory.cs" />
@@ -106,8 +108,6 @@
   <PropertyGroup>
     <PostBuildEvent>"$(ProjectDir)\..\Tools\pdb2mdb.exe" $(TargetFileName)
 echo FA | xcopy $(TargetName).dll $(ProjectDir)\..\Assets\Res\Code\$(TargetName).dll.bytes
-
-
 echo FA | xcopy $(TargetName).pdb $(ProjectDir)\..\Assets\Res\Code\$(TargetName).pdb.bytes
 echo FA | xcopy $(TargetName).dll.mdb $(ProjectDir)\..\Assets\Res\Code\$(TargetName).mdb.bytes</PostBuildEvent>
   </PropertyGroup>
