--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -77,37 +77,40 @@
       <Link>Message\RpcException.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\Component.cs">
-      <Link>Object\Component.cs</Link>
+      <Link>Base\Object\Component.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ComponentFactory.cs">
-      <Link>Object\ComponentFactory.cs</Link>
+      <Link>Base\Object\ComponentFactory.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\Disposer.cs">
-      <Link>Object\Disposer.cs</Link>
+      <Link>Base\Object\Disposer.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\Entity.cs">
-      <Link>Object\Entity.cs</Link>
+      <Link>Base\Object\Entity.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\EntityFactory.cs">
-      <Link>Object\EntityFactory.cs</Link>
+      <Link>Base\Object\EntityFactory.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\IAwake.cs">
-      <Link>Object\IAwake.cs</Link>
+      <Link>Base\Object\IAwake.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ILoad.cs">
-      <Link>Object\ILoad.cs</Link>
+      <Link>Base\Object\ILoad.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\IStart.cs">
-      <Link>Object\IStart.cs</Link>
+      <Link>Base\Object\IStart.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\IUpdate.cs">
-      <Link>Object\IUpdate.cs</Link>
+      <Link>Base\Object\IUpdate.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\Object.cs">
-      <Link>Object\Object.cs</Link>
+      <Link>Base\Object\Object.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ObjectEventAttribute.cs">
-      <Link>Object\ObjectEventAttribute.cs</Link>
+      <Link>Base\Object\ObjectEventAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Base\Object\ObjectPool.cs">
+      <Link>Base\Object\ObjectPool.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Component\ConfigComponent.cs">
       <Link>Component\ConfigComponent.cs</Link>
